# NL_Hecate

./: .gitignore  CLAUDE.md  PROGRESS_REPORT.md  README.md  ROADMAP.md
cli/: Cargo.toml
cli/configs/: gear1_d1024_gpu1.json  gear1_d2048_hd64_gpu0.json  gear1_d768_gpu0.json  sfl5_d1024_h100_runpod.json  sfl5_d1024_h100_runpod_v2.json  sfl5_d1024_h100_runpod_v3.json  sfl5_d1024_h100_runpod_v4.json  sfl5_lifecycle_d1024_gpu0.json  sfl5_lifecycle_d768_gpu0.json  sfl5_overnight_d1024_gpu1.json  sfl5_overnight_d1024_hd128_gpu1.json  sfl5_tape_10k_gpu0.json  titans_mag_d1024_hd64_gpu0.json
cli/src/: chat.rs  checkpoint_policy.rs  config.rs  data.rs  eval.rs  feed.rs  generate.rs  log.rs  main.rs  probe.rs  run.rs  sample.rs  state_file.rs  step.rs
core/: Cargo.toml  build.rs
core/benches/: edge_bench.rs
core/kernels/: adamw.cu  cross_entropy.cu  delta_backward.cu  delta_chunkwise_backward.cu  delta_chunkwise_forward.cu  delta_forward.cu  delta_phase2_backward.cu  delta_phase2_forward.cu  dgd_backward.cu  dgd_forward.cu  elementwise.cu  embedding.cu  error_clip.cuh  error_subtract_clip.cu  gate_backward.cu  hebbian_backward.cu  hebbian_forward.cu  l2_normalize.cu  layer_norm.cu  m3_optimizer.cu  m_norm_clamp.cu  m_norm_project.cuh  moneta_backward.cu  moneta_forward.cu  pool_ops.cu  swa_backward.cu  swa_forward.cu  swiglu_backward.cu  swiglu_forward.cu  titans_backward.cu  titans_chunkwise_backward.cu  titans_chunkwise_forward.cu  titans_forward.cu  titans_mlp_backward.cu  titans_mlp_forward.cu  titans_phase2_backward.cu  titans_phase2_forward.cu  tnt_backward.cu  tnt_forward.cu
core/src/: adamw.rs  associative_scan.rs  atlas_omega.rs  atlas_parallel.rs  backward.rs  bf16.rs  checkpoint.rs  chunkwise_gd.rs  chunkwise_self_ref.rs  cms_variants.rs  composition_pattern.rs  composition_safety.rs  conductor.rs  context_stream.rs  conv1d.rs  cuda_ffi.rs  cuda_graph.rs  delta_rule.rs  dgd.rs  dispatch.rs  distributed.rs  dynamic_freq.rs  edge.rs  feature_map.rs  forward.rs  gpu_backward.rs  gpu_buf.rs  gpu_forward.rs  gpu_optimizer.rs  gpu_params.rs  gpu_profiler.rs  gpu_stacked_backward.rs  gpu_stacked_forward.rs  gpu_stacked_optimizer.rs  gradient.rs  gradient_tests.rs  hebbian_rule.rs  lattice_gla.rs  lattice_osr.rs  lib.rs  (+24 more)
core/tests/: cuda_test_utils.rs  test_associative_scan.rs  test_atlas_omega.rs  test_chunkwise.rs  test_cms.rs  test_cms_variants.rs  test_context_stream.rs  test_cublas.rs  test_cuda_compositions.rs  test_cuda_delta.rs  test_cuda_dgd.rs  test_cuda_graph.rs  test_cuda_hebbian.rs  test_cuda_large_d.rs  test_cuda_m_norm_clamp.rs  test_cuda_swa.rs  test_cuda_titans.rs  test_cuda_tnt.rs  test_dgd.rs  test_dispatch.rs  test_distributed.rs  test_dynamic_freq.rs  test_edge.rs  test_enzyme_vec.rs  test_feature_map.rs  test_gpu_resident.rs  test_gradient_checkpoint.rs  test_hebbian.rs  test_integration_spike.rs  test_lattice.rs  test_lattice_gla.rs  test_m3.rs  test_mac.rs  test_mac_stacked.rs  test_mal.rs  test_memora.rs  test_moneta.rs  test_retention.rs  test_serialization.rs  test_serving.rs  (+7 more)
python/: Cargo.toml  baseline_pytorch.py  build.py  hecate.py  launch_curriculum.sh  launch_sharegpt.sh  profile_tape.py  pyproject.toml  serve.py  validate_run.py
python/configs/: ablation_A_no_memory.json  ablation_B_k1_titans.json  ablation_B_tnt.json  ablation_C_k4_cms.json  ablation_C_tnt.json  ablation_D_k4_dgd.json  ablation_D_tnt.json  curriculum_100k.json  dolmino_100b_k4.json  fresh_k1_tape1x_gpu0.json  full_60m.json  gate_warmup_diagnostic.json  gate_warmup_diagnostic_100k.json  gate_warmup_diagnostic_gpu1.json  gear2_sweep_sl1024.json  gear2_sweep_sl2048.json  gear2_sweep_sl4096.json  h100_d1024_tnt_100k.json  h100_d1024_tnt_benchmark.json  h100_push_up_phase1_k1.json  h100_push_up_phase2_k2.json  h100_push_up_phase3_k3.json  h100_push_up_phase4_k4.json  hope_60m.json  k1_titans_d768_6b_gpu1.json  k2_chain_m3_d512_4b_gpu0.json  k2_chain_m3_d768_6b_gpu0.json  k2_chain_smollm_d768_6b_gpu0.json  k2_dolmino_d768_gpu1.json  k2_independent_m3_d512_4b_gpu0.json  k2_smollm_d512_gpu1.json  k2_zero_retention_all_proxy_gpu0.json  k3_chain_m3_d512_gpu0.json  k3_smollm_d512_gpu0.json  k4_chain_dolmino_d1024_32h_gpu0.json  k4_chain_dolmino_d2048_64h_h200.json  k4_chain_dolmino_d768_12h_gpu0.json  k4_chain_dolmino_d768_24h_gpu1.json  k4_chain_m3_d512_4b_gpu0.json  k4_chain_smollm_d768_6b_gpu1.json  (+31 more)
python/data/: download_fineweb.py  prepare_curriculum.py  prepare_sharegpt.py
python/data-prep/: eval_checkpoint.py  prepare_gutenberg_deck.py  prepare_reasoning.py  prepare_tulu3_sft.py
python/engine/: __init__.py  chat.py  cms_tape.py  config.py  data.py  donor.py  evaluation.py  generation.py  logging_utils.py  loop.py  niah.py  niah_verify.py  tokenizer.py
python/scripts/: baseline_pytorch.py  convert_checkpoint.py  download_fineweb.py  embed_concept_nodes.py  eval_checkpoint.py  extract_gpt2_donor.py  (+14 more)
spike/: Cargo.toml  README.md  TOOLCHAIN.md
(+273 files in other folders)
