[package]
name = "nl-hecate"
version = "0.1.0"
edition = "2021"
publish = false
description = "NL-Hecate: Nested Learning CLI"

[[bin]]
name = "nl_hecate"
path = "src/main.rs"

[features]
default = ["cuda"]
cuda = ["nl-hecate-core/cuda"]

[dependencies]
nl-hecate-core = { path = "../core", features = ["internal"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[profile.release]
lto = "fat"
opt-level = 2
