[package]
name = "nl-hecate-core"
version = "0.1.0"
edition = "2021"
publish = false

# Track Zero-A: SWA Transformer pipeline
# Pure Rust forward + backward with Enzyme AD for gradient computation.

# Fat LTO is MANDATORY for Enzyme.
# Enzyme operates at LLVM IR level and must see all function bodies
# in a single compilation unit. Without fat LTO, cross-module calls
# are opaque and Enzyme cannot differentiate through them.
[profile.dev]
lto = "fat"

[profile.release]
lto = "fat"
opt-level = 2

[features]
cuda = ["cc"]
distributed = []
serving = []
internal = []
edge = []
enzyme = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
paste = "1"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3"

[[test]]
name = "test_edge"
required-features = ["edge"]

[[bench]]
name = "edge_bench"
harness = false
required-features = ["edge"]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"], optional = true }
