[package]
name = "nl-hecate-core"
version = "0.1.0"
edition = "2021"
publish = false

# Track Zero-A: SWA Transformer pipeline
# Pure Rust forward + backward with Wengert tape AD for gradient computation.

[profile.release]
opt-level = 2

[features]
cuda = ["cc"]
distributed = []
serving = []
internal = []
edge = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
paste = "1"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3"

[[test]]
name = "test_cublas"
required-features = ["cuda"]

[[test]]
name = "test_gpu_resident"
required-features = ["cuda"]

[[test]]
name = "test_edge"
required-features = ["edge"]

[[bench]]
name = "edge_bench"
harness = false
required-features = ["edge"]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"], optional = true }
