[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nl_hecate"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "numpy>=1.24",
    "zstandard>=0.21",
    "tokenizers>=0.15",
]

[tool.maturin]
features = []
auditwheel = "skip"   # CUDA libs are system-provided; bundling inflates wheel 4MB → 572MB
