[package]
name = "nl-hecate-enzyme-spike"
version = "0.0.1"
edition = "2021"
publish = false

# Enzyme spike: Phase 0 proof-of-concept
# Tests whether Enzyme can differentiate through the Rust patterns
# that NL_Hecate's architecture requires.

# Fat LTO is MANDATORY for Enzyme.
# Enzyme operates at LLVM IR level and must see all function bodies
# in a single compilation unit. Without fat LTO, cross-module calls
# are opaque and Enzyme cannot differentiate through them.
[profile.dev]
lto = "fat"

[profile.release]
lto = "fat"
opt-level = 2

# No external dependencies for the spike.
# We want to test pure Enzyme-on-Rust without any library interactions.
[dependencies]
